Fix Review Overflow

--- a/src/blocks/reviews/reviews.css
+++ b/src/blocks/reviews/reviews.css
@@ -3,7 +3,12 @@
   padding: 45px 0 65px;
   box-sizing: border-box;
   font-family: 'Neue Machina', Arial, Helvetica, sans-serif;
-  overflow: hidden;
+}
+
+@media (max-width: 1440px) {
+  .reviews {
+    overflow: hidden;
+  }
 }
 
 @media (max-width: 720px) {
